discussion/kv_engine/183265/183265_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54516: Drop ModifyCollection events

If a collection is dropped, the modify event must be purged
along with any normal collection items. All of the dropKey
paths were setup to ignore any system events, this is no
longer true with the new event.

Change-Id: Ia89d4b7a56e9f3b5b23dd176e5d00da88bd83f3e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-11-28 13:13:38.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-11-28 13:14:17.000000000
Message: 
Patch Set 2: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/326651/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-28 15:11:23.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/596/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23: error: use of undeclared identifier "SystemEventFactory" [clang-diagnostic-error]
        auto modify = SystemEventFactory::isModifyCollection(key);
                      ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/596/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: use of undeclared identifier "SystemEventFactory" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/596/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/573/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: use of undeclared identifier "SystemEventFactory"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/573/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/758/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/collections/scan_context.cc(38): error C2653: "SystemEventFactory": is not a class or namespace name ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/758/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/596/ : FAILURE

Compile error at [2022-11-28T13:33:00.421Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: ?SystemEventFactory? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/596/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/615/ : FAILURE

Compile error at [2022-11-28T14:38:41.380Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: use of undeclared identifier "SystemEventFactory"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/615/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/605/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [9/93]: test dcp consumer noop...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:3223 Test failed: `" (Expected `DCP_STREAM_REQ", got `DCP_CONTROL" - Unexpected last_op)
[2022-11-28T14:49:02.890Z] (139 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/605/ )

Failure of GoogleTest "CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only":

<pre>
[ RUN      ] CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only
[2022-11-28T14:51:47.397Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:478: Failure
[2022-11-28T14:51:47.397Z] Value of: dropped.empty()
[2022-11-28T14:51:47.397Z]   Actual: false
[2022-11-28T14:51:47.397Z] Expected: true
[2022-11-28T14:51:47.397Z] [  FAILED  ] CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=value_only" (118 ms)
CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/605/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/605/ )

Test exceeded the timeout:
[2022-11-28T14:49:02.891Z] /usr/bin/timeout: the monitored command dumped core ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/605/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/606/ : FAILURE

Compile error at [2022-11-28T14:42:03.348Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/collections/scan_context.cc:38:23:
error: ?SystemEventFactory? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/606/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/854/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [9/93]: test dcp consumer noop...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:3223 Test failed: `" (Expected `DCP_STREAM_REQ", got `DCP_CONTROL" - Unexpected last_op)
[2022-11-28T13:51:53.476Z] (9 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/854/ )

Failure of GoogleTest "CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only":

<pre>
[ RUN      ] CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only
[2022-11-28T13:54:25.276Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:478: Failure
[2022-11-28T13:54:25.276Z] Value of: dropped.empty()
[2022-11-28T13:54:25.276Z]   Actual: false
[2022-11-28T13:54:25.276Z] Expected: true
[2022-11-28T13:54:25.276Z] [  FAILED  ] CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=value_only" (19 ms)
CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/854/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/618/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [9/93]: test dcp consumer noop...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:3221 Test failed: `" (Expected `DCP_STREAM_REQ", got `DCP_CONTROL" - Unexpected last_op)
[2022-11-28T14:38:33.982Z] (24 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/618/ )

Failure of GoogleTest "CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only":

<pre>
[ RUN      ] CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only
[2022-11-28T14:39:35.616Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:478: Failure
[2022-11-28T14:39:35.616Z] Value of: dropped.empty()
[2022-11-28T14:39:35.616Z]   Actual: false
[2022-11-28T14:39:35.616Z] Expected: true
[2022-11-28T14:39:35.616Z] [  FAILED  ] CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=value_only" (9 ms)
CollectionsEraserTests/CollectionsEraserTest.drop_after_modify/persistent_couchstore_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/618/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/618/ )

Test exceeded the timeout:
[2022-11-28T14:38:33.982Z] /usr/bin/timeout: the monitored command dumped core ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/618/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21464/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/588/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
